--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,14 +3,25 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react/no-children-prop": [
+      "on",
+      {
+        "allowFunctions": true
+      }
+    ]
   },
-  "ignorePatterns": ["build/**"]
+  "ignorePatterns": [
+    "build/**"
+  ]
 }
