--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
     "css-minimizer-webpack-plugin": "^4.2.2",
+    "esbuild-sass-plugin": "^2.4.3",
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11",
     "fs-extra": "^11.1.0",
@@ -47,6 +48,8 @@
     "pre-commit": "^1.2.2",
     "prettier": "^2.8.0",
     "progress-bar-webpack-plugin": "^2.1.0",
+    "sass": "^1.56.2",
+    "sass-loader": "^13.2.0",
     "terser-webpack-plugin": "^5.3.6",
     "webextension-polyfill": "^0.10.0",
     "webpack": "^5.75.0"
